--- a/style.css
+++ b/style.css
@@ -3,12 +3,34 @@
     margin-bottom: 80px;
 }
 
+.espacamento-menor {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
 .fundo-azul {
     background-color: blue;
 }
 
 #sobre {
     background-color: #f5f5f5;
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+
+#programacao {
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+
+#galeria {
+    background-color: #f5f5f5;
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+
+#footer {
+    background-color: #FFCA2C;
     padding-top: 80px;
     padding-bottom: 80px;
 }
